fix(fixed layout shifts): layout shifts has been fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden !important;
+  max-width: 100%;
 }
 :target:before {
   content: "";
